# rexio-agent

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml  run_agent.py
.agents/: AGENTS.md
aethelis/: __init__.py
aethelis/core/: __init__.py  llm.py  loop.py  skills_compiler.py
aethelis/db/: connection.py  schema.sql
aethelis/gateway/: __init__.py
aethelis/skills/: __init__.py
aethelis/tools/: __init__.py  registry.py  web_tools.py
rexio_agent/: SOUL.md  __init__.py
rexio_agent/core/: __init__.py  background_review.py  config.py  llm.py  loop.py  memory_store.py  skills_compiler.py
rexio_agent/db/: connection.py  schema.sql  seed_skills.py
rexio_agent/gateway/: __init__.py  telegram.py
rexio_agent/skills/: __init__.py  code_output_format.md  debugging-rexio.md  file_operations.md  planning.md  python_execution.md  rexio-agent.md  systematic_debugging.md  web_researcher.md
rexio_agent/tools/: __init__.py  executor.py  file_tools.py  registry.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/components/: ChatContainer.tsx  ChatInput.tsx  RexioLiveLogsModal.tsx  Sidebar.tsx  SkillModal.tsx  SkillsHub.tsx  StepsSummaryModal.tsx  TraceModal.tsx
