[project]
name = "aethelis-agent"
version = "0.1.0"
description = "A self-improving, persistent AI agent framework."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "google-genai>=0.1.1",
    "openai>=2.24.0",
    "python-dotenv>=1.0.1",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "python-telegram-bot>=21.3",
    "discord.py>=2.4.0",
    "rich>=13.7.1",
    "pydantic>=2.7.4",
    "httpx>=0.27.0",
    "croniter>=2.0.5",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aethelis"]
